--- a/captions/templates/upload.html
+++ b/captions/templates/upload.html
@@ -54,11 +54,9 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-lg">
-  <div class="container-fluid">
-    <span class="navbar-brand mb-0 h1">Image Caption Generator</span>
-  </div>
-
-
+    <div class="container-fluid">
+      <span class="navbar-brand mb-0 h1">Image Caption Generator</span>
+    </div>
   </nav>
   <div class="container">
     <h2 class="header-title mb-4 text-center">Upload an Image</h2>
@@ -78,6 +76,10 @@
       </div>
     {% endif %}
   </div>
+  <div class="alert alert-success text-center mb-4" style="font-size:1.07rem;">
+  <span style="font-weight:500;">Powered by AI:</span> This application uses advanced Computer Vision and Deep Learning models to intelligently describe your images!
+</div>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
