final output changes

--- a/captions/templates/captions/base.html
+++ b/captions/templates/captions/base.html
@@ -24,7 +24,7 @@
   </main>
 
   <footer class="footer mt-5 py-3 bg-olive text-center text-white">
-    <p class="mb-0">© 2025 Janusha | Built with Django, Deep Learning & Computer Vision 💗</p>
+    <p class="mb-0">© 2025 Janusha | Built with Django, Deep Learning & Computer Vision </p>
   </footer>
 </body>
 </html>
