--- a/captions/templates/captions/upload.html
+++ b/captions/templates/captions/upload.html
@@ -5,7 +5,7 @@
 
 <form method="POST" enctype="multipart/form-data" action="{% url 'upload_image' %}" class="mb-5">
     {% csrf_token %}
-    <input type="file" name="image" class="form-control mb-3" required>
+    <input type="file" name="image" accept="image/*" class="form-control mb-3" required>
     <button type="submit" class="btn btn-success">Generate Caption</button>
   </form>
 
